# valkyrie_oscr

./: CMakeLists.txt  package.xml
config/: valkyrie-fixed.rviz  valkyrie-gui.rviz  valkyrie.rviz
launch/: display-fixed.launch  display-gui.launch  display.launch
scripts/: model_parse  motion_acrobatic  motion_arms  motion_examples  valkyrie_ros_robot.py
scripts/plots/: cropimg.m  plot_acrobatic.py
scripts/utils/: floor_publisher
urdf/: valkyrie_sim_red.urdf
