<?xml version="1.0"?>
<package format="2">
  <name>valkyrie_oscr</name>
  <version>0.0.0</version>
  <description>The valkyrie_oscr package</description>
  <maintainer email="oramos@todo.todo">Oscar Ramos</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
